feat: configure email

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,7 @@ DATABASE_USER="manager"
 DATABASE_PASSWORD="***"
 DATABASE_PORT=5432
 REDIS_HOST=redis
+
+# Gmail account credentials
+GMAIL_USERNAME="blah"
+GMAIL_APP_PASSWORD="cookies and cream"
