--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@
 # Schema documented at https://render.com/docs/yaml-spec
 services:
   - type: web # valid values: https://render.com/docs/yaml-spec#type
-    name: peaceful-savannah-40598
+    name: kxback
     env: docker # valid values: https://render.com/docs/yaml-spec#environment
     dockerfilePath: Dockerfile.render
     plan: starter # optional; defaults to starter
@@ -25,5 +25,5 @@ services:
       #     property: connectionString
 
 databases: # Render PostgreSQL database
-  - name: postgresql-closed-99916
+  - name: postgres-db
     # ipAllowList: [] # only allow internal connections
