--- a/render.yaml
+++ b/render.yaml
@@ -11,6 +11,10 @@ services:
         fromDatabase:
           name: postgres-db
           property: connectionString
+      - key: RAILS_MASTER_KEY
+        sync: false
+      - key: WEB_CONCURRENCY
+        value: 2 # sensible default
       - key: LANG
         value: en_US.UTF-8
       - key: RACK_ENV
