--- a/render.yaml
+++ b/render.yaml
@@ -1,20 +1,11 @@
 services:
   - type: web # valid values: https://render.com/docs/yaml-spec#type
     name: kxback
-    runtime: ruby
-    buildCommand: "./bin/render-build.sh"
-    startCommand: "./bin/rails server"
+    env: docker
+    dockerfilePath: "./Dockerfile"
     plan: free # optional; defaults to starter
     numInstances: 1
     envVars:
-      - key: DATABASE_URL
-        fromDatabase:
-          name: postgres-db
-          property: connectionString
-      - key: RAILS_MASTER_KEY
-        sync: false
-      - key: WEB_CONCURRENCY
-        value: 2 # sensible default
       - key: LANG
         value: en_US.UTF-8
       - key: RACK_ENV
@@ -30,4 +21,3 @@ databases: # Render PostgreSQL database
   - name: postgres-db
     plan: free
 
-    # ipAllowList: [] # only allow internal connections
