chore: add missing secrets

--- a/render.yaml
+++ b/render.yaml
@@ -6,6 +6,12 @@ services:
     plan: free # optional; defaults to starter
     numInstances: 1
     envVars:
+      - key: SECRET_KEY_BASE
+        sync: false
+      - key: RAILS_MASTER_KEY
+        sync: false
+      - key: WEB_CONCURRENCY
+        value: 2 # sensible default
       - key: LANG
         value: en_US.UTF-8
       - key: RACK_ENV
