--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,8 @@
 services:
   - type: web # valid values: https://render.com/docs/yaml-spec#type
     name: kxback
+    dockerfilePath: ./Dockerfile
+    dockerCommand: ./entrypoints/docker-entrypoint.sh
     runtime: docker
     plan: free # optional; defaults to starter
     numInstances: 1
