--- a/render.yaml
+++ b/render.yaml
@@ -4,7 +4,7 @@ services:
     dockerfilePath: ./Dockerfile
     dockerCommand: ./entrypoints/docker-entrypoint.sh
     runtime: docker
-    plan: free # optional; defaults to starter
+    plan: starter # optional; defaults to starter
     numInstances: 1
     envVars:
       - key: RAILS_MASTER_KEY
