--- a/render.yaml
+++ b/render.yaml
@@ -25,6 +25,10 @@ services:
         value: enabled
       - key: PORT
         sync: false
+      - key: DATABASE_URL
+        fromDatabase:
+          name: postgres-db
+          property: connectionString
 
 databases: # Render PostgreSQL database
   - name: postgres-db
